--- a/style.css
+++ b/style.css
@@ -200,6 +200,28 @@ nav ul.grid{
 }
 
 
+/* menu-mobile-toggle  */
+
+.toggle{
+  color: var(--base-color);
+  font-size:1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close{
+  visibility:hidden;
+  opacity: 0;
+
+  position: absolute;
+  right:1.5rem;
+  /* to-do animacion */
+}
+
+nav.show .icon-close{
+  visibility:visible;
+  opacity: 1;
+  
+}
 
 /* ===================== HOME ==========================*/
 
