--- a/style.css
+++ b/style.css
@@ -78,8 +78,17 @@ body{
   height:1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 57%, 1) 0%,
-    hsla(var(--hue), 65%, 88%, 0.34) 100%
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34) 
+   );
+}
+
+.divider-2{
+  height:1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34), 
+    hsla(var(--hue), 36%, 57%, 1)
    );
 }
 
@@ -88,7 +97,7 @@ body{
 /* ===================== LAYOUT ==========================*/
 
 .container{
-   margin-right: 1.5rem;
+  margin-right: 1.5rem;
   margin-left: 1.5rem; 
 }
 
@@ -101,6 +110,19 @@ body{
 .section{ 
   padding: 5rem 0;
 }
+
+.section  .title{
+  margin-bottom:1rem;
+}
+
+.section header{
+  margin-bottom:4rem;
+}
+
+
+
+
+/* ===================== ???? ==========================*/
 
 #header{
   border-bottom: 1px solid #e4e4e4;
@@ -276,9 +298,54 @@ border-radius:0.25rem;
 }
 
 
+/* ===================== ABOUT ==========================*/
+
+#about {
+  background-color: white;
+}
+
+#about .container{
+  margin: 0 ;
+}
+
+#about .image{
+  position:relative;
+}
+
+#about .image::before{
+ content:"";
+ height:100%;
+ width:100%;
+ background:var(--base-color-second);
+ position:absolute;
+ top:-8.3%;
+ left:-33%;
+ z-index:0;
+ 
+}
+
+#about .image img{
+  position:relative;
+  
+  
+}
+
+#about .image img ,
+#about .image::before{
+border-radius:0.25rem;
+}
+     
+#about .text{
+  margin-left:1.5rem;
+  margin-right:1.5rem;
+  
+}
 
 
 
+/* #about .text p{
+  margin-bottom:2rem;
+} */
 
 
 
