--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?x191fx');
-  src:  url('fonts/icomoon.eot?x191fx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?x191fx') format('truetype'),
-    url('fonts/icomoon.woff?x191fx') format('woff'),
-    url('fonts/icomoon.svg?x191fx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?i5m742');
+  src:  url('fonts/icomoon.eot?i5m742#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i5m742') format('truetype'),
+    url('fonts/icomoon.woff?i5m742') format('woff'),
+    url('fonts/icomoon.svg?i5m742#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
